--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,7 +9,7 @@
           <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
           <!-- Dark Logo icon -->
           <img
-            src="../assets/images/logo-icon.png"
+            src="../assets/images/uco-logo.jpg"
             alt="homepage"
             class="dark-logo"
           />
@@ -553,16 +553,16 @@
             data-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
-            ><img [src]="usuario.imagenUrl" alt="user" class="profile-pic"
+            ><img src="../assets/images/avatar.jpg" alt="user" class="profile-pic"
           /></a>
           <div class="dropdown-menu dropdown-menu-right animated fadeIn fast">
             <ul class="dropdown-user">
               <li>
                 <div class="dw-user-box">
                   <div class="u-img">
-                    <img [src]="usuario.imagenUrl" alt="user" />
+                    <img src="../assets/images/avatar.jpg" alt="user" />
                   </div>
-                  <div class="u-text">
+                  <!-- <div class="u-text">
                     <h4>{{ usuario.nombre }}</h4>
                     <p class="text-muted">
                       {{ usuario.email | slice: 0:20
@@ -573,7 +573,7 @@
                       class="btn btn-rounded btn-danger btn-sm"
                       >View Profile</a
                     >
-                  </div>
+                  </div> -->
                 </div>
               </li>
               <li role="separator" class="divider"></li>
