--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,8 +9,8 @@
                     <ul id="sidebarnav">
                         <li class="user-profile">
                             <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                                <img [src]="usuario.imagenUrl" alt="user" />
-                                <span class="hide-menu">{{usuario.nombre}} </span>
+                                <img src="../assets/images/avatar.jpg" alt="user" />
+                                <!-- <span class="hide-menu">{{usuario.nombre}} </span> -->
                             </a>
                             <ul aria-expanded="false" class="collapse">
                                 <li><a routerLinkActive="active" routerLink="./perfil">My Profile </a></li>
