Cambios en side bar y header component

--- a/src/app/pages/mantenimientos/usuarios/usuarios.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuarios.component.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col">
             <div class="text-right">
-              <a class="btn btn-primary" routerLink="/dashboard/medico/nuevo">
+              <a class="btn btn-primary" routerLink="/dashboard/usuario/nuevo">
                 <i class="fa fa-user-plus"></i>
                 Crear usuario
               </a>
