--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -20,7 +20,7 @@
         </div> -->
   
       </div>
-      <footer class="footer">© 2021 Admin Pro by wrappixel.com</footer>
+      <footer class="footer">© 2021 Parqueadero UCO by Daniel Esquivel</footer>
     </div>
   </div>
 
