--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -562,18 +562,18 @@
                   <div class="u-img">
                     <img src="../assets/images/avatar.jpg" alt="user" />
                   </div>
-                  <!-- <div class="u-text">
-                    <h4>{{ usuario.nombre }}</h4>
-                    <p class="text-muted">
+                  <div class="u-text">
+                    <h4>{{ usuario }}</h4>
+                    <!-- <p class="text-muted">
                       {{ usuario.email | slice: 0:20
                       }}{{ usuario.email.length > 20 ? "..." : "" }}
-                    </p>
-                    <a
+                    </p> -->
+                    <!-- <a
                       href="pages-profile.html"
                       class="btn btn-rounded btn-danger btn-sm"
                       >View Profile</a
-                    >
-                  </div> -->
+                    > -->
+                  </div>
                 </div>
               </li>
               <li role="separator" class="divider"></li>
