--- a/src/app/pages/mantenimientos/medicos/medico.component.html
+++ b/src/app/pages/mantenimientos/medicos/medico.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-6">
     <div class="card">
       <div class="card-body">
@@ -86,7 +86,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="card">
   <div class="card-body">
