--- a/src/app/pages/mantenimientos/medicos/medicos.component.html
+++ b/src/app/pages/mantenimientos/medicos/medicos.component.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col">
             <div class="text-right">
-              <a class="btn btn-primary" routerLink="/dashboard/medico/nuevo">
+              <a class="btn btn-primary" routerLink="/dashboard/usuario/nuevo">
                 <i class="fa fa-hospital-o"></i>
                 Crear médico
               </a>
