--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
                         <li class="user-profile">
                             <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                                 <img src="../assets/images/avatar.jpg" alt="user" />
-                                <!-- <span class="hide-menu">{{usuario.nombre}} </span> -->
+                                <span class="hide-menu">{{usuario}} </span>
                             </a>
                             <ul aria-expanded="false" class="collapse">
                                 <li><a routerLinkActive="active" routerLink="./perfil">My Profile </a></li>
