--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,49 @@
-<p>dashboard works!</p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <div class="container">
+        <img
+          class="d-block img-fluid"
+          src="../assets/images/big/pico-placa-uco.jpg"
+          alt="First slide"
+        />
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="container">
+        <img
+          class="d-block img-fluid"
+          src="../assets/images/big/uco-2.jpg"
+          alt="Second slide"
+        />
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="container">
+        <img
+          class="d-block img-fluid"
+          src="../assets/images/big/uco-3.jpg"
+          alt="Third slide"
+        />
+      </div>
+    </div>
+  </div>
+  <a
+    class="carousel-control-prev"
+    href="#carouselExampleControls"
+    role="button"
+    data-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a
+    class="carousel-control-next"
+    href="#carouselExampleControls"
+    role="button"
+    data-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
