--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -110,26 +110,15 @@
                 <div class="message-center">
                   <!-- Message -->
                   <a href="#">
-                    <div class="btn btn-danger btn-circle">
-                      <i class="fa fa-link"></i>
-                    </div>
-                    <div class="mail-contnet">
-                      <h5>Luanch Admin</h5>
-                      <span class="mail-desc">Just see the my new admin!</span>
-                      <span class="time">9:30 AM</span>
-                    </div>
-                  </a>
-                  <!-- Message -->
-                  <a href="#">
                     <div class="btn btn-success btn-circle">
                       <i class="ti-calendar"></i>
                     </div>
                     <div class="mail-contnet">
-                      <h5>Event today</h5>
+                      <h5>Hoario de pico y placa</h5>
                       <span class="mail-desc"
-                        >Just a reminder that you have event</span
+                        >El pico y placa iniciará pronto!</span
                       >
-                      <span class="time">9:10 AM</span>
+                      <span class="time">07:30 AM</span>
                     </div>
                   </a>
                   <!-- Message -->
@@ -138,22 +127,11 @@
                       <i class="ti-settings"></i>
                     </div>
                     <div class="mail-contnet">
-                      <h5>Settings</h5>
+                      <h5>Configuración</h5>
                       <span class="mail-desc"
-                        >You can customize this template as you want</span
+                        >Puedes actualizar el horario de pico y placa</span
                       >
                       <span class="time">9:08 AM</span>
-                    </div>
-                  </a>
-                  <!-- Message -->
-                  <a href="#">
-                    <div class="btn btn-primary btn-circle">
-                      <i class="ti-user"></i>
-                    </div>
-                    <div class="mail-contnet">
-                      <h5>Pavan kumar</h5>
-                      <span class="mail-desc">Just see the my admin!</span>
-                      <span class="time">9:02 AM</span>
                     </div>
                   </a>
                 </div>
@@ -193,7 +171,7 @@
           >
             <ul>
               <li>
-                <div class="drop-title">You have 4 new messages</div>
+                <div class="drop-title">Tienes 4 mensajes nuevos</div>
               </li>
               <li>
                 <div class="message-center">
@@ -208,8 +186,8 @@
                       <span class="profile-status online pull-right"></span>
                     </div>
                     <div class="mail-contnet">
-                      <h5>Pavan kumar</h5>
-                      <span class="mail-desc">Just see the my admin!</span>
+                      <h5>Esteban Díaz</h5>
+                      <span class="mail-desc">Deseo registrar mi vehiculo!</span>
                       <span class="time">9:30 AM</span>
                     </div>
                   </a>
@@ -224,27 +202,11 @@
                       <span class="profile-status busy pull-right"></span>
                     </div>
                     <div class="mail-contnet">
-                      <h5>Sonu Nigam</h5>
+                      <h5>Alejandro Duque</h5>
                       <span class="mail-desc"
-                        >I've sung a song! See you at</span
+                        >Cuando inicia el pico y placa?</span
                       >
                       <span class="time">9:10 AM</span>
-                    </div>
-                  </a>
-                  <!-- Message -->
-                  <a href="#">
-                    <div class="user-img">
-                      <img
-                        src="../assets/images/users/3.jpg"
-                        alt="user"
-                        class="img-circle"
-                      />
-                      <span class="profile-status away pull-right"></span>
-                    </div>
-                    <div class="mail-contnet">
-                      <h5>Arijit Sinh</h5>
-                      <span class="mail-desc">I am a singer!</span>
-                      <span class="time">9:08 AM</span>
                     </div>
                   </a>
                   <!-- Message -->
@@ -258,8 +220,8 @@
                       <span class="profile-status offline pull-right"></span>
                     </div>
                     <div class="mail-contnet">
-                      <h5>Pavan kumar</h5>
-                      <span class="mail-desc">Just see the my admin!</span>
+                      <h5>Vanesa Franco</h5>
+                      <span class="mail-desc">Cuando finaliza el pico y placa?</span>
                       <span class="time">9:02 AM</span>
                     </div>
                   </a>
@@ -278,242 +240,6 @@
         <!-- End Messages -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
-        <!-- mega menu -->
-        <!-- ============================================================== -->
-        <li class="nav-item dropdown mega-dropdown">
-          <a
-            class="nav-link dropdown-toggle waves-effect waves-dark"
-            href=""
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-            ><i class="mdi mdi-view-grid"></i
-          ></a>
-          <div class="dropdown-menu animated fadeIn fast">
-            <ul class="mega-dropdown-menu row">
-              <li class="col-lg-3 col-xlg-2 m-b-30">
-                <h4 class="m-b-20">CAROUSEL</h4>
-                <!-- CAROUSEL -->
-                <div
-                  id="carouselExampleControls"
-                  class="carousel slide"
-                  data-ride="carousel"
-                >
-                  <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                      <div class="container">
-                        <img
-                          class="d-block img-fluid"
-                          src="../assets/images/big/img1.jpg"
-                          alt="First slide"
-                        />
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="container">
-                        <img
-                          class="d-block img-fluid"
-                          src="../assets/images/big/img2.jpg"
-                          alt="Second slide"
-                        />
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="container">
-                        <img
-                          class="d-block img-fluid"
-                          src="../assets/images/big/img3.jpg"
-                          alt="Third slide"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <a
-                    class="carousel-control-prev"
-                    href="#carouselExampleControls"
-                    role="button"
-                    data-slide="prev"
-                  >
-                    <span
-                      class="carousel-control-prev-icon"
-                      aria-hidden="true"
-                    ></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a
-                    class="carousel-control-next"
-                    href="#carouselExampleControls"
-                    role="button"
-                    data-slide="next"
-                  >
-                    <span
-                      class="carousel-control-next-icon"
-                      aria-hidden="true"
-                    ></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </div>
-                <!-- End CAROUSEL -->
-              </li>
-              <li class="col-lg-3 m-b-30">
-                <h4 class="m-b-20">ACCORDION</h4>
-                <!-- Accordian -->
-                <div
-                  id="accordion"
-                  class="nav-accordion"
-                  role="tablist"
-                  aria-multiselectable="true"
-                >
-                  <div class="card">
-                    <div class="card-header" role="tab" id="headingOne">
-                      <h5 class="mb-0">
-                        <a
-                          data-toggle="collapse"
-                          data-parent="#accordion"
-                          href="#collapseOne"
-                          aria-expanded="true"
-                          aria-controls="collapseOne"
-                        >
-                          Collapsible Group Item #1
-                        </a>
-                      </h5>
-                    </div>
-                    <div
-                      id="collapseOne"
-                      class="collapse show"
-                      role="tabpanel"
-                      aria-labelledby="headingOne"
-                    >
-                      <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header" role="tab" id="headingTwo">
-                      <h5 class="mb-0">
-                        <a
-                          class="collapsed"
-                          data-toggle="collapse"
-                          data-parent="#accordion"
-                          href="#collapseTwo"
-                          aria-expanded="false"
-                          aria-controls="collapseTwo"
-                        >
-                          Collapsible Group Item #2
-                        </a>
-                      </h5>
-                    </div>
-                    <div
-                      id="collapseTwo"
-                      class="collapse"
-                      role="tabpanel"
-                      aria-labelledby="headingTwo"
-                    >
-                      <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high
-                        life accusamus terry richardson ad squid.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header" role="tab" id="headingThree">
-                      <h5 class="mb-0">
-                        <a
-                          class="collapsed"
-                          data-toggle="collapse"
-                          data-parent="#accordion"
-                          href="#collapseThree"
-                          aria-expanded="false"
-                          aria-controls="collapseThree"
-                        >
-                          Collapsible Group Item #3
-                        </a>
-                      </h5>
-                    </div>
-                    <div
-                      id="collapseThree"
-                      class="collapse"
-                      role="tabpanel"
-                      aria-labelledby="headingThree"
-                    >
-                      <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high
-                        life accusamus terry richardson ad squid.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="col-lg-3 m-b-30">
-                <h4 class="m-b-20">CONTACT US</h4>
-                <!-- Contact -->
-                <form>
-                  <div class="form-group">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="exampleInputname1"
-                      placeholder="Enter Name"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="Enter email"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <textarea
-                      class="form-control"
-                      id="exampleTextarea"
-                      rows="3"
-                      placeholder="Message"
-                    ></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-info">Submit</button>
-                </form>
-              </li>
-              <li class="col-lg-3 col-xlg-4 m-b-30">
-                <h4 class="m-b-20">List style</h4>
-                <!-- List style -->
-                <ul class="list-style-none">
-                  <li>
-                    <a href="javascript:void(0)"
-                      ><i class="fa fa-check text-success"></i> You can give
-                      link</a
-                    >
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)"
-                      ><i class="fa fa-check text-success"></i> Give link</a
-                    >
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)"
-                      ><i class="fa fa-check text-success"></i> Another Give
-                      link</a
-                    >
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)"
-                      ><i class="fa fa-check text-success"></i> Forth link</a
-                    >
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)"
-                      ><i class="fa fa-check text-success"></i> Another fifth
-                      link</a
-                    >
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </li>
-        <!-- ============================================================== -->
-        <!-- End mega menu -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- Language -->
@@ -526,20 +252,14 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            <i class="flag-icon flag-icon-us"></i
+            <i class="flag-icon flag-icon-co"></i
           ></a>
           <div class="dropdown-menu dropdown-menu-right animated fadeIn fast">
             <a class="dropdown-item" href="#"
-              ><i class="flag-icon flag-icon-in"></i> India</a
+              ><i class="flag-icon flag-icon-us"></i> USA</a
             >
             <a class="dropdown-item" href="#"
               ><i class="flag-icon flag-icon-fr"></i> French</a
-            >
-            <a class="dropdown-item" href="#"
-              ><i class="flag-icon flag-icon-cn"></i> China</a
-            >
-            <a class="dropdown-item" href="#"
-              ><i class="flag-icon flag-icon-de"></i> Dutch</a
             >
           </div>
         </li>
@@ -578,24 +298,21 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a routerLink="./perfil"><i class="ti-user"></i> My Profile</a>
+                <a routerLink="./perfil"><i class="ti-user"></i> Mi Perfil</a>
               </li>
               <li>
-                <a href="#"><i class="ti-wallet"></i> My Balance</a>
-              </li>
-              <li>
-                <a href="#"><i class="ti-email"></i> Inbox</a>
+                <a href="#"><i class="ti-email"></i> Email</a>
               </li>
               <li role="separator" class="divider"></li>
               <li>
                 <a [routerLink]="['account-settings']"
-                  ><i class="ti-settings"></i> Account Setting</a
+                  ><i class="ti-settings"></i> Configuración</a
                 >
               </li>
               <li role="separator" class="divider"></li>
               <li>
                 <a (click)="logOut()" class="cursor">
-                  <i class="fa fa-power-off"></i> Logout
+                  <i class="fa fa-power-off"></i> Salir
                 </a>
               </li>
             </ul>
