--- a/src/styles.css
+++ b/src/styles.css
@@ -55,3 +55,5 @@
 .oculto {
   display: none;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
